k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noa-server
  labels:
    name: noa-server
    pod-security.kubernetes.io/enforce: restricted
